# CryptoFile

./: .gitignore  BUG_HUNT_10.md  CHANGELOG.md  README.md  SECURITY_AUDIT_1.md  build_exe.py  installer.iss  pyproject.toml  run.py
cryptofile/: __init__.py  __main__.py  _atomic.py  _logging.py  batch.py  crypto.py  file_ops.py  gui.py  shell_integration.py
docs/: ARCHITECTURE.md  BUILDING.md  PROTOCOL.md  SECURITY.md
tests/: test_batch.py  test_bug_fixes.py  test_crypto.py  test_expansion.py  test_file_ops.py  test_security_1_0_7.py
