[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptofile"
version = "1.0.1"
description = "Right-click file encryption for Windows — Argon2id + AES-256-GCM."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
cryptofile = "cryptofile.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptofile*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
