[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptofile"
version = "1.0.7"
description = "Right-click file encryption for Windows — Argon2id + AES-256-GCM."
requires-python = ">=3.11"
# Exact pins for the shipped PyInstaller build — supply-chain hygiene. A
# future release that wants to widen these should run `pip install --upgrade`
# in the venv, re-run the test suite, and bump these to match
# `pip freeze`. See SECURITY_AUDIT_1.md M6 and CHANGELOG 1.0.7.
dependencies = [
    "cryptography==46.0.7",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "cffi==2.0.0",
    "pycparser==3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
cryptofile = "cryptofile.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptofile*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
